--- a/src/formation_helper/team_block/TeamBlock.css
+++ b/src/formation_helper/team_block/TeamBlock.css
@@ -1,12 +1,45 @@
 .team-block {
-  background-color: lightblue;
+  /* background-color: lightblue; */
   padding: 20px;
   margin: 10px 0;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .team-block-item {
   padding: 10px;
+}
+
+.team-block-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.team-block-reset-all-button {
+  font-size: 16px;
+  width: 20%;
+  align-items: center;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-left: 20px;
+}
+
+.team-block-reset-button {
+  font-size: 16px;
+  align-items: center;
+  background-color: #e11843;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-left: 20px;
 }
 
 .hero-setup {
