--- a/src/formation_helper/team_block/TeamBlock.css
+++ b/src/formation_helper/team_block/TeamBlock.css
@@ -46,14 +46,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-bottom: '16px';
+  margin: 8px 0 8px 0;
+  padding: 12px 0 12px 0;
+}
+
+.hero-setup-hero_selector {
+  margin-top: 10px;
+  padding: 5px;
+  font-size: 15px;
 }
 
 .hero-basic {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-bottom: '16px';
+  margin-bottom: 12px;
 }
 
 .formation-basic {
